# dossier-sigma

./: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/lorry/folder/items/dossiersigma/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Bento4Wrapper.cpp  Bento4Wrapper.h  CMakeLists.txt
app/src/main/java/lorry/folder/items/dossiersigma/: Bento4Wrapper.kt  BentoJNI.kt  GlobalStateManager.kt  PermissionsManager.kt  SigmaApplication.kt
app/src/main/java/lorry/folder/items/dossiersigma/data/: FolderDatabaseDataSource.kt  FolderRepository.kt
app/src/main/res/drawable/: acteur.xml  annuler.xml  bold.xml  bouger.xml  browser.xml  camera.xml  centre1.xml  clavier.xml  clear.xml  coller.xml  corbeille.xml  crop.xml  deplacer.xml  directions.xml  dossier.xml  downloads.xml  downloads2.xml  enregistrer.xml  etiquette.xml  etiquette2.xml  exit.xml  fichier.xml  file.xml  file_yellow.xml  film.xml  folder.xml  folder_empty.xml  folder_empty_blue.xml  folder_empty_yelllow.xml  folder_full.xml  folder_full_blue.xml  folder_full_yellow.xml  hdd.xml  html.xml  ic_launcher_foreground.xml  image_nb.xml  interrogation.xml  italic.xml  la_droite.xml  la_gauche.xml  (+21 more)
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/lorry/folder/items/dossiersigma/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+124 files in other folders)
